--- a/location.html
+++ b/location.html
@@ -15,7 +15,230 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
-
+	<header class="header">
+		<nav class="gnb">
+			<ul class="gnb-list">
+				<li class="gnb-tab"><a href="location.html"><span>위치</span></a></li>
+				<li class="gnb-tab"><a href="class.html"><span>수업</span></a></li>
+				<li class="gnb-tab"><a href="rental.html"><span>대여</span></a></li>
+			</ul>
+			<div class="wave-tab"><a href="#"><span>속초 파도 LIVE</span>
+				<img src="images/common/dir.svg" alt="속초 파도 LIVE 보러가기">
+			</a></div>
+		</nav>
+		<div class="nav-mobile"></div>
+		<a href="index.html" class="logo">
+			<div class="logo-symbol">
+				<img src="images/common/logo-white.svg" alt="펭귄서프클럽"/>
+			</div>
+			<div class="logo-title">
+				<img src="images/common/logoletter-white.svg" alt="펭귄서프클럽 로고" />
+			</div>
+		</a>
+	</header>
+	<section class="jumbotron">
+		<div class="jumbotron-img">
+			<img src="images/location/jumbotron.jpg" alt="대문이미지">
+		</div>
+		<div class="jumbotron-title">
+			<img src="images/common/icon-location-white.svg" alt="아이콘">
+			<p>펭귄서프클럽 위치안내</p>
+		</div>
+	</section>
+	<section class="container">
+		<div class="container-title">
+			<span class="title-line"></span>
+			<p class="title">서울에서 1시간 20분!</p>
+		</div>
+		<div class="container-content">
+			<div class="location-warpper">
+				<div class="location-map">
+					<img src="images/location/map.jpg" alt="지도">
+				</div>
+				<div class="location-tab-wrapper">
+					<div class="location-tab-desc">
+						<div class="tab-desc__title">접근성이 훌륭한 위치</div>
+						<div class="tab-desc__desc">서울역 기준으로 운전시 1시간 20분밖에 안걸리는 곳에 위치해 있습니다. 색다른 취미를 즐기실 수 있는 기회를 놓치지 마세요!</div>
+					</div>
+					<div class="location-tab">
+						<img src="images/common/icon-location-yellow.svg" alt="주소">
+						<p>강원도 삼척시 우주동 동해안로 34-7</p>
+					</div>
+					<div class="location-tab">
+						<img src="images/common/icon-call.svg" alt="전화">
+						<p>000 - 0000 - 0000</p>
+					</div>
+					<div class="location-tab">
+						<img src="images/common/icon-kakaonav.svg" alt="카카오내비">
+						<p>카카오 내비게이션으로 연결</p>
+					</div>
+					<div class="location-tab">
+						<img src="images/common/icon-gglmap.svg" alt="구글맵">
+						<p>구글맵으로 연결</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="container">
+		<div class="container-title">
+			<span class="title-line"></span>
+			<p class="title">소개합니다</p>
+		</div>
+		<div class="container-content">
+			<div class="introduce-wrapper">
+				<div class="introduce-part">
+					<div class="introduce-part__img">
+						<img src="images/location/club-01.jpg" alt="외관사진">
+					</div>
+					<div class="introduce-part__desc">
+						<div class="desc-bg">
+							<div class="desc-text">
+								<div class="desc-text__title">펭귄서프클럽 외관</div>
+								<div class="desc-text__desc">2019년을 맞아 리뉴얼 하였습니다. 직원들의 활발함을 그대로 표출하여 즐거움이 머무르는 곳입니다.</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="introduce-part">
+					<div class="introduce-part__desc">
+						<div class="desc-bg">
+							<div class="desc-text">
+								<div class="desc-text__title">해수욕장에서 단 3분거리</div>
+								<div class="desc-text__desc">보드 등 장비를 들고 이동해도 전혀 무리가 가지 않는 해수욕장 바로 옆에 위치해 있습니다</div>
+							</div>
+						</div>
+					</div>
+					<div class="introduce-part__img">
+						<img src="images/location/club-02.jpg" alt="근처 해수욕장">
+					</div>
+				</div>
+				<div class="introduce-part">
+					<div class="introduce-part__img">
+						<img src="images/location/club-03.jpg" alt="관광가이드">
+					</div>
+					<div class="introduce-part__desc">
+						<div class="desc-bg">
+							<div class="desc-text">
+								<div class="desc-text__title">유명 맛집 먹거리</div>
+								<div class="desc-text__desc">즐겁게 노는 자리에 맛있는 음식이 빠질 수 없습니다. 유명 맛집들이 위치한 먹거리가 5분거리에 펼쳐져 있습니다.</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="container">
+		<div class="container-title">
+			<span class="title-line"></span>
+			<p class="title">여름, 그 순간들</p>
+			<p class="description">그 때 그 즐거움을 그대로 간직할 수 있도록 스냅촬영과 함께 하세요. 클래스와 함께 예약하시면 저렴한 가격으로 진행가능합니다.</p>
+			<span class="button">예약하기</span>
+		</div>
+		<div class="container-content">
+			<div class="gallery-wrapper">
+				<div class="gallery-tab-list">
+					<div class="gallery-tab">
+						<div class="gallery-tab__img">
+							<img src="images/location/gallery-01.jpg" />
+						</div>
+						<div class="gallery-tab__date">
+							<div class="date-num">2018.07.17</div>
+							<div class="date-line"></div>
+						</div>
+					</div>
+					<div class="gallery-tab">
+						<div class="gallery-tab__img">
+							<img src="images/location/gallery-02.jpg" />
+						</div>
+						<div class="gallery-tab__date">
+							<div class="date-num">2018.07.15</div>
+							<div class="date-line"></div>
+						</div>
+					</div>
+					<div class="gallery-tab">
+						<div class="gallery-tab__img">
+							<img src="images/location/gallery-03.jpg" />
+						</div>
+						<div class="gallery-tab__date">
+							<div class="date-num">2018.07.14</div>
+							<div class="date-line"></div>
+						</div>
+					</div>
+				</div>
+				<div class="gallery-dir">
+					<div class="gallery-dir__tab prev">
+						<img src="images/common/dir-dark.svg" alt="이전">
+					</div>
+					<div class="gallery-dir__tab next">
+						<img src="images/common/dir-dark.svg" alt="다음">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="footer-insta">
+			<div class="insta-part">
+				<div class="insta-tab pic1">
+					<img src="images/common/pic1.jpg" alt="펭귄서프클럽 인스타그램">
+					<div class="img-filter"></div>
+					<span>#펭귄서프클럽</span>
+				</div>
+				<div class="pic3-wrapper">
+					<div class="pic3">
+						<img src="images/common/pic3-1.jpg" alt="그 여름날의 추억">
+						<div class="img-filter"></div>
+						<span>#그 여름날의 추억</span>
+					</div>
+					<div class="pic3">
+						<img src="images/common/pic3-2.jpg" alt="서핑스냅">
+						<div class="img-filter"></div>
+						<span>#서핑스냅</span>
+					</div>
+				</div>
+			</div>
+			<div class="insta-part small">
+				<div class="insta-tab pic2">
+					<img src="images/common/pic2.jpg" alt="즐거운서핑클럽">
+					<div class="img-filter"></div>
+					<span>#즐거운서핑클럽</span>
+				</div>
+				<div class="insta-tab pic3">
+					<img src="images/common/pic3-3.jpg" alt="여름엔 바다">
+					<div class="img-filter"></div>
+					<span>#여름엔 바다</span>
+				</div>
+				<div class="insta-tab pic3">
+					<img src="images/common/pic3-4.jpg" alt="서핑보드대여">
+					<div class="img-filter"></div>
+					<span>#서핑보드대여</span>
+				</div>
+			</div>
+		</div>
+		<div class="footer-info">
+			<div class="footer-logo">
+				<img src="images/common/logo-white.svg" alt="펭귄서프클럽">
+				<img src="images/common/logoletter-white.svg" alt="펭귄서프클럽">
+			</div>
+			<div class="footer-sns">
+				<div class="sns-tab">
+					<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
+					<div class="sns-tab__tooltip">팔로우</div>
+				</div>
+				<div class="sns-tab">
+					<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
+					<div class="sns-tab__tooltip">페이지</div>
+				</div>
+				<div class="sns-tab">
+					<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
+					<div class="sns-tab__tooltip">소식보기</div>
+				</div>
+			</div>
+			<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
+		</div>
+	</footer>
 </body>
 <script type="text/javascript" src="javascripts/common.js"></script>
 </html>
