--- a/footer.html
+++ b/footer.html
@@ -14,24 +14,65 @@
 </head>
 <body>
 	<footer class="footer">
-		<div class="footer-logo">
-			<img src="images/common/logo-full-white.svg" alt="펭귄서프클럽">
+		<div class="footer-insta">
+			<div class="insta-part">
+				<div class="insta-tab pic1">
+					<img src="images/common/pic1.jpg" alt="펭귄서프클럽 인스타그램">
+					<div class="img-filter"></div>
+					<span>#펭귄서프클럽</span>
+				</div>
+				<div class="pic3-wrapper">
+					<div class="pic3">
+						<img src="images/common/pic3-1.jpg" alt="그 여름날의 추억">
+						<div class="img-filter"></div>
+						<span>#그 여름날의 추억</span>
+					</div>
+					<div class="pic3">
+						<img src="images/common/pic3-2.jpg" alt="서핑스냅">
+						<div class="img-filter"></div>
+						<span>#서핑스냅</span>
+					</div>
+				</div>
+			</div>
+			<div class="insta-part small">
+				<div class="insta-tab pic2">
+					<img src="images/common/pic2.jpg" alt="즐거운서핑클럽">
+					<div class="img-filter"></div>
+					<span>#즐거운서핑클럽</span>
+				</div>
+				<div class="insta-tab pic3">
+					<img src="images/common/pic3-3.jpg" alt="여름엔 바다">
+					<div class="img-filter"></div>
+					<span>#여름엔 바다</span>
+				</div>
+				<div class="insta-tab pic3">
+					<img src="images/common/pic3-4.jpg" alt="서핑보드대여">
+					<div class="img-filter"></div>
+					<span>#서핑보드대여</span>
+				</div>
+			</div>
 		</div>
-		<div class="footer-sns">
-			<div class="sns-tab">
-				<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
-				<div class="sns-tab__tooltip">팔로우</div>
+		<div class="footer-info">
+			<div class="footer-logo">
+				<img src="images/common/logo-white.svg" alt="펭귄서프클럽">
+				<img src="images/common/logoletter-white.svg" alt="펭귄서프클럽">
 			</div>
-			<div class="sns-tab">
-				<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
-				<div class="sns-tab__tooltip">페이지</div>
+			<div class="footer-sns">
+				<div class="sns-tab">
+					<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
+					<div class="sns-tab__tooltip">팔로우</div>
+				</div>
+				<div class="sns-tab">
+					<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
+					<div class="sns-tab__tooltip">페이지</div>
+				</div>
+				<div class="sns-tab">
+					<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
+					<div class="sns-tab__tooltip">소식보기</div>
+				</div>
 			</div>
-			<div class="sns-tab">
-				<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
-				<div class="sns-tab__tooltip">소식보기</div>
-			</div>
+			<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
 		</div>
-		<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
 	</footer>
 </body>
 </html>
